tests/baselines/reference/parserClassDeclaration3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration3.ts (4 errors) ====
    class C implements A extends B {
                         ~~~~~~~
!!! error TS1005: '{' expected.
                                   ~
!!! error TS1005: ';' expected.
                       ~
!!! error TS2304: Cannot find name 'A'.
                                 ~
!!! error TS2304: Cannot find name 'B'.
    }